--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -11,7 +11,7 @@ In this section, we provide an overview of methods used to develop LRPs for our 
 
 We consider two types of LRPs based on two different metrics:
 
-1) Proportion-based LRPs are based on the proportion of CUs within an SMU that are assessed as being above the red WSP status zone. We assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above red (i.e., either amber or green).
+1) Proportion-based LRPs are based on the proportion of CUs within an SMU that are assessed as being above the Red WSP status zone. We assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above Red (i.e., either Amber or Green).
 
 2) Aggregate abundance-based LRPs based on total SMU-level spawning abundance. 
 
@@ -19,16 +19,16 @@ While aggregate abundance-based LRPs are consistent with what is typically used 
 
 WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of priority CUs to date.  We demonstrate the application of the Pacific Salmon Status Scanner Tool (hereafter referred to as the 'Salmon Scanner') that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). Applying this tool enables the generation of up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt et al., in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->. When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the Salmon Scanner better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the Salmon Scanner reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
 
-When developing aggregate abundance-based LRP options for Pacific salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two methods to identify these levels: (i) logistic regression-based LRPs and (ii) projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
+When developing aggregate abundance-based LRP options for Pacific salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. We use two methods to identify these levels: (i) logistic regression-based LRPs and (ii) projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
 
 We also maintain consistency with the WSP by only including populations without significant enhancement when evaluating CU and SMU status. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and < 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@dfoCanadaPolicyConservation2005a; @withlerGeneticallyBasedTargets2018]. Populations where production is dominated by hatchery-origin fish (PNI values < 0.5) are excluded from analyses. In addition, for systems where time-series of the proportion of hatchery marked fish on the spawning grounds are available, these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
 
 
 ## PROPORTION-BASED LRPS
 
-A proportion-based LRP is simply the proportion of CUs in the SMU required to be assessed as being above red status. In all three case studies, we set an LRP requiring 100% of CUs to be above red status. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having red status. Rationale for the choice of 100% of CUs required to be above red status in order for an SMU to be considered above its LRP is described in Holt et al. (in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+A proportion-based LRP is simply the proportion of CUs in the SMU required to be assessed as being above Red status. In all three case studies, we set an LRP requiring 100% of CUs to be above Red status. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having Red status. Rationale for the choice of 100% of CUs required to be above Red status in order for an SMU to be considered above its LRP is described in Holt et al. (in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
 
-We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., S\textsubscript{gen}, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between Salmon Scanner status assessments and statuses derived from abundances relative to lower benchmarks.
+We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the Red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above Red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., S\textsubscript{gen}, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between Salmon Scanner status assessments and statuses derived from abundances relative to lower benchmarks.
 
 When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. The use of generational means is consistent with the approach taken for abundance based benchmarks in WSP assessments and the Salmon Scanner tool (approaches i and ii). Generational smoothing integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009a; Porszt et al. 2012<!--still to be added-->]. As a result, generational smoothing reduces reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances.
 
@@ -56,7 +56,7 @@ The Salmon Scanner uses the most recent generational mean spawner abundance (cal
 
 ## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
 
-Aggregate abundance-based LRPs are based on the SMU-level abundance at which there is a desired probability that 100% of CUs (the same proportion that was used for proportion-based LRPs) will be above a single benchmark that has been selected to represent CU status. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for status above the red zone. The Salmon Scanner tool was considered in preliminary analyses as a way to identify red status for aggregate abundance-based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a desired probability that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+Aggregate abundance-based LRPs are based on the SMU-level abundance at which there is a desired probability that 100% of CUs (the same proportion that was used for proportion-based LRPs) will be above a single benchmark that has been selected to represent CU status. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for status above the Red zone. The Salmon Scanner tool was considered in preliminary analyses as a way to identify Red status for aggregate abundance-based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a desired probability that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
  
 We consider two types of aggregate abundance-based LRPs in our case studies: logistic regression-based LRPs and projection-based LRPs. Logistic regression LRPs are estimated using historical data, representing conditions that have been previously experienced by a SMU and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, thus allowing uncertainty in future processes to be accounted for through alternative scenarios. Projection-based LRPs have the potential to overcome one key short-coming of the logistic regression-based LRP; they do not require the assumption that historic conditions represent current (or future) conditions as is required for the logistic regression-based approach. Instead, users have the ability to specify model structure and parameter estimates, as well as their uncertainties, that reflect the best-available science on current (or future) dynamics, to the extent that this information is available.
 
@@ -136,7 +136,7 @@ Deviance residuals, $d$, were estimated for each year,
    (\#eq:DevianceResid)
 \end{equation}
 
-where $\mu$ is the predicted probability of all CUs being above their lower benchmark and $y$ is the observation (1 or 0, indicating all CUs above red or not, respectively), in a given year [@foxAppliedRegressionAnalysis2016]. Equation \@ref(eq:DevianceResid) reduces to [@ahmadDiagnosticResidualOutliers2011]:
+where $\mu$ is the predicted probability of all CUs being above their lower benchmark and $y$ is the observation (1 or 0, indicating all CUs above Red or not, respectively), in a given year [@foxAppliedRegressionAnalysis2016]. Equation \@ref(eq:DevianceResid) reduces to [@ahmadDiagnosticResidualOutliers2011]:
 
 \begin{align}
 d = 
