--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -105,7 +105,7 @@ We use three alternative ways to characterize CU status when developing LRPs for
 
 The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for proportion-based reference points when a recent WSP status assessment is not available. <!-- KH: Added last bit about WSP not available to address comment from Luke  -->The other two approaches are primarily used to develop aggregate abundance-based LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
 
-The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S\textsubscript{gen}, where CU status is considered poor when abundance drops below S\textsubscript{gen}. The value of S\textsubscript{gen} represents the number of spawners required to recover to S\textsubscript{MSY} (spawners <!--at?--> maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009a]. S\textsubscript{gen} is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between red and amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015].    
+The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S\textsubscript{gen}, where CU status is considered poor when abundance drops below S\textsubscript{gen}. The value of S\textsubscript{gen} represents the number of spawners required to recover to S\textsubscript{MSY} (spawners <!--at?--> maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009a]. S\textsubscript{gen} is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between Red and Amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015].    
 
 The third approach is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU [@ifcrtConservationStrategyCoho2006; @arbeiderInteriorFraserCoho2020]. Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawning Coho salmon, excluding hatchery fish spawning in the wild. We selected the short-term recovery target to represent poor CU status in our case study (e.g., below a lower benchmark) because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We have included this third approach to defining CU status to demonstrate the range of approaches and metrics that can be used, and to demonstrate sensitivity of the LRP to choice of metrics for assigning CU-status.  Future iterations of the Pacific Salmon Status Scanner approach could include distributional metrics such as those used in the IFCRT approach.  
 
@@ -213,7 +213,7 @@ where, $W$ represents the Lambert W function [@scheuerellExplicitSolutionCalcula
 
 ### Methods
 
-We looked at the proportion of CUs that had Pacific Salmon Status Scanner status assessments above the red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark \= S\textsubscript{gen} and upper benchmark \= 0.8S\textsubscript{MSY}) when assessing status with the Pacific Salmon Status Scanner: the base Ricker model and the Ricker_priorCap model. Estimates of S\textsubscript{gen} and S\textsubscript{MSY} were made using all data available up to 2020.
+We looked at the proportion of CUs that had Pacific Salmon Status Scanner status assessments above the Red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having Red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark \= S\textsubscript{gen} and upper benchmark \= 0.8S\textsubscript{MSY}) when assessing status with the Pacific Salmon Status Scanner: the base Ricker model and the Ricker_priorCap model. Estimates of S\textsubscript{gen} and S\textsubscript{MSY} were made using all data available up to 2020.
 
 For comparison, we also looked at the proportion of CUs that had recent generational average (3-year) spawning abundance greater than S\textsubscript{gen} in each historical year and the proportion of CUs that failed to meet the IFCRT distributional target of at least half of all sub-populations within each CU having more than 1000 spawners.  
 
@@ -221,14 +221,14 @@ For comparison, we also looked at the proportion of CUs that had recent generati
 
 Estimates of S\textsubscript{gen} based on the Ricker_priorCap model were higher than those based on the base Ricker model for four of the five CUs (Middle Fraser, Lower Thompson, North Thompson, and South Thompson) and were approximately equal for the fifth CU (Fraser Canyon; Appendix \@ref(app:coho-appendix)). As a result, generational average spawning abundance was more likely to drop below S\textsubscript{gen} when it was estimated using the Ricker_priorCap. Under the base Ricker model formulation, generational average spawning abundance remained above S\textsubscript{gen} for all years between 2000 and 2020 (Figure \@ref(fig:coho-CU-multiDim-Ricker)).  In comparison, under the Ricker_priorCap formulation, generational average abundance dropped below S\textsubscript{gen} in one or more years for Lower Thompson CU (2006), Middle Fraser CU (2006, 2008), and South Thompson CU (2000, 2006, 2007, 2015; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). As a result, at least one CU had stock status assessed as below S\textsubscript{gen} for 5 of the 21 years between 2000 and 2020.
 
-When CU status was assessed using the Pacific Salmon Status Scanner with lower and upper abundance-based benchmarks based on S\textsubscript{gen} and 0.8S\textsubscript{MSY} as inputs, CU status was always assessed as red for years in which the generational average spawning abundance dropped below S\textsubscript{gen}, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because according to the  Pacific Salmon Status Scanner decision tree (Figure \@ref(fig:decision-tree)), status is derived from abundance-based benchmarks in most years, which means that being below S\textsubscript{gen} is most often the trigger for a red CU status assessment. An exception occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners and CU is assigned red status under the first node of the decision tree even though spawning abundances are above S\textsubscript{gen} (Figure \@ref(fig:decision-tree)). As a result, when Pacific Salmon Status Scanner status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 4 of 21 years based on Fraser Canyon spawning abundances dropping below 1500 spawners in three years (2015-2017), and one year (2000) in which the Lower Thompson CU had spawning abundance < S\textsubscript{gen} (Figure \@ref(fig:coho-CU-multiDim-Ricker)). When Pacific Salmon Status Scanner status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a proportion-based LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < S\textsubscript{gen} in other CUs (Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Pacific Salmon Status Scanner status  was above red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
+When CU status was assessed using the Pacific Salmon Status Scanner with lower and upper abundance-based benchmarks based on S\textsubscript{gen} and 0.8S\textsubscript{MSY} as inputs, CU status was always assessed as Red for years in which the generational average spawning abundance dropped below S\textsubscript{gen}, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because according to the  Pacific Salmon Status Scanner decision tree (Figure \@ref(fig:decision-tree)), status is derived from abundance-based benchmarks in most years, which means that being below S\textsubscript{gen} is most often the trigger for a Red CU status assessment. An exception occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners and CU is assigned Red status under the first node of the decision tree even though spawning abundances are above S\textsubscript{gen} (Figure \@ref(fig:decision-tree)). As a result, when Pacific Salmon Status Scanner status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 4 of 21 years based on Fraser Canyon spawning abundances dropping below 1500 spawners in three years (2015-2017), and one year (2000) in which the Lower Thompson CU had spawning abundance < S\textsubscript{gen} (Figure \@ref(fig:coho-CU-multiDim-Ricker)). When Pacific Salmon Status Scanner status was assessed using abundance-based benchmarks from the Ricker_priorCap model, a proportion-based LRP would have been breached in 9 of 21 years (2000-2001, 2005-2007, 2010, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < S\textsubscript{gen} in other CUs (Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Pacific Salmon Status Scanner status  was above Red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
 
 
-```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots indicate years in which all CUs had Pacific Salmon Status Scanner assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had Pacific Salmon Status Scanner assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots indicate years in which all CUs had Pacific Salmon Status Scanner assessments above Red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had Pacific Salmon Status Scanner assessments in the Red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker.png")
 ```
 
-```{r coho-CU-multiDim-Ricker-Cap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots indicate years in which all CUs had Pacific Salmon Status Scanner assessments above red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had Pacific Salmon Status Scanner status in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-multiDim-Ricker-Cap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots indicate years in which all CUs had Pacific Salmon Status Scanner assessments above Red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had Pacific Salmon Status Scanner status in the Red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus_Ricker_priorCap.png")
 ```
 
@@ -561,17 +561,17 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the Pacific Salmon Status Scanner in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on S\textsubscript{gen} estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S\textsubscript{gen} from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
+We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above Red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the Pacific Salmon Status Scanner in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on S\textsubscript{gen} estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S\textsubscript{gen} from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
 
-We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that the Pacific Salmon Status Scanner be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
+We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that the Pacific Salmon Status Scanner be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2007 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker and Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used S\textsubscript{gen} estimates from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance-based methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only triggered in the year 2000. The decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as 'red' when the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S\textsubscript{gen} is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above S\textsubscript{gen}. This situation occurs for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S\textsubscript{gen} benchmark.
+Comparison of SMU status estimates over time for all LRP estimation methods that used S\textsubscript{gen} estimates from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance-based methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only triggered in the year 2000. The decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as Red when the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S\textsubscript{gen} is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above S\textsubscript{gen}. This situation occurs for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S\textsubscript{gen} benchmark.
 
-In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the proportion-based methods (labelled 'Prop:') did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S\textsubscript{gen} estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
+In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the proportion-based methods (labelled 'Prop:') did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S\textsubscript{gen} estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered Red status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
 
 When the Ricker-priorCap model was used to estimate S\textsubscript{gen} instead of the base Ricker model, both S\textsubscript{gen} and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (status bars 6-9 in Figure \@ref(fig:coho-statusPlot-withBars)).  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 14 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 9, 9, and 8 of the 21 years for the 'Prop: Scanner-priorCap', 'Prop: Sgen-priorCap' and 'Abund: Logistic:Sgen-priorCap' methods, respectively.    
 
@@ -622,7 +622,7 @@ Given that the estimation of logistic regression-based LRPs were sensitive to da
 
 The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given a specified fixed exploitation rate policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above S~gen~. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
 
-Projection-based LRPs were also sensitive to the level of co-variation<!--LW: elsewhere this is covariation--> in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in higher LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will need to be higher to help avoid the situation where weak CUs drop into red status. We recommend that possible instabilities in projections be evaluated for this SMU, and other applications for projection-based LRPs, which could arise due to changes in covariation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation.
+Projection-based LRPs were also sensitive to the level of co-variation<!--LW: elsewhere this is covariation--> in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in higher LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will need to be higher to help avoid the situation where weak CUs drop into Red status. We recommend that possible instabilities in projections be evaluated for this SMU, and other applications for projection-based LRPs, which could arise due to changes in covariation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation.
 
 <!--CH: I think projection-based LRPs are also sensitivity to differences in size/capacity of component CUs. I guess this is shown somewhat in the Appendix on sens to ER, where I kept SREP constant or varying. If it comes up in the review we can point participants there-->
 
